# Athena-Cversion

./: AthenaDocs.md  AthenaDocsCylInput.md  AthenaDocsCylIntro.md  AthenaDocsCylOA.md  AthenaDocsCylOutput.md  AthenaDocsDownLd.md  AthenaDocsGalileo.md  AthenaDocsMP.md  AthenaDocsPG.md  AthenaDocsPGCentering.md  AthenaDocsPGCodeStruct.md  AthenaDocsPGCodeStyle.md  AthenaDocsPGConsPrim.md  AthenaDocsPGDom.md  AthenaDocsPGDomS.md  AthenaDocsPGGrid.md  AthenaDocsPGGridS.md  AthenaDocsPGMem.md  AthenaDocsPGMesh.md  AthenaDocsPGMeshS.md  AthenaDocsPGOutS.md  AthenaDocsPGProbs.md  AthenaDocsPals.md  AthenaDocsParBlock.md  AthenaDocsParConfig.md  AthenaDocsParDataStruct.md  AthenaDocsParIntro.md  AthenaDocsParOutBinned.md  AthenaDocsParOutHistory.md  AthenaDocsParOutList.md  AthenaDocsParOutOverview.md  AthenaDocsParProb.md  AthenaDocsPeople.md  AthenaDocsSMRConfig.md  AthenaDocsSMRGeom.md  AthenaDocsSMRInput.md  AthenaDocsSMRIntro.md  AthenaDocsSMRMPI.md  AthenaDocsSMROutput.md  AthenaDocsSRConfigure.md  (+61 more)
_layouts/: .page.html.swp  page.html
apps/: athinput.turb  planet-disk.c  rps.c  turb.c
assets/: main.scss
doc/: autocollect.pl
doc/ProgramGuide/: PG3.0.tex  figure1.eps  figure2.eps
doc/UsersGuide/: UG3.0.tex  UG3.1.tex  figure1.ps  figure2.ps
fftsrc/: Makefile  Makefile.in
src/: Makefile.in  ath_array.c  ath_fft.c  ath_fft.h  ath_files.c  ath_log.c  ath_parallel.c  ath_signal.c  athena.h  baton.c  bvals_grav.c  bvals_mhd.c  bvals_rad.c  bvals_radMHD.c  bvals_radMHD_shear.c  bvals_shear.c  cc_pos.c  convert_var.c  convert_var_sr.c  copyright.h  cyl.c  cyl.h  debug.c  debug.h  defs.h.in  dump_binary.c  dump_dx.c  dump_history.c  dump_tab.c  dump_table.c  dump_vtk.c  esystem_prim.c  esystem_roe.c  flux_2shock.c  flux_exact.c  flux_force.c  flux_hllc.c  flux_hlld.c  flux_hlle.c  flux_roe.c  (+48 more)
src/fftsrc/: Makefile.in  ath_fft.c  fft_2d.c  fft_3d.c  prototypes.h  remap_2d.c  remap_3d.c
src/fullradiation/: FullRT_flux.c  Makefile  Makefile.in  bvals_fullrad.c  dump_intensity_vtk.c  fullRT_2d.c  fullRT_3d.c  hydro_to_fullrad.c  init_fullradiation.c  output_intensity_vtk.c  output_spec.c  prototypes.h  utils_fullrad.c
src/gravity/: Makefile.in  bvals_grav.c  prototypes.h  selfg.c  selfg_fft.c  selfg_fft_disk.c  selfg_fft_obc.c  selfg_multigrid.c
src/integrators/: BackEuler.c  BackEuler_1d.c  BackEuler_1d_lis.c  BackEuler_2d.c  BackEuler_2d_FLD.c  BackEuler_2d_lis.c  BackEuler_3d.c  BackEuler_3d_FLD.c  BackEuler_3d_hypre.c  BackEuler_3d_lis.c  BackEuler_smr_3d.c  Makefile.in  Rad_Advection_Flux.c  integrate.c  integrate_1d_ctu.c  integrate_1d_ctu_cyl.c  integrate_1d_radMHD.c  integrate_1d_radiMHD.c  integrate_1d_vl.c  integrate_1d_vl_sr.c  integrate_2d_ctu.c  integrate_2d_ctu_cyl.c  integrate_2d_radMHD.c  integrate_2d_vl.c  integrate_2d_vl_sr.c  integrate_3d_ctu.c  integrate_3d_ctu_cyl.c  integrate_3d_radMHD.c  integrate_3d_vl.c  integrate_3d_vl_sr.c  prototypes.h  smr_radMHD.c
src/ionradiation/: Makedepend  Makefile  Makefile.in  ionrad.c  ionrad.h  ionrad_3d.c  ionrad_chemistry.c  ionrad_prototypes.h  ionradplane_3d.c  ionradpoint_3d.c  prototypes.h
src/microphysics/: Makefile.in  anisotropic_conduction.c  braginskii.c  conduction.c  cool.c  cool_solver.c  diff_dt.c  get_eta.c  hall.c  integrate_cooling.c  integrate_diffusion.c  isotropic_conduction.c  new_dt_diff.c  prototypes.h  resistivity.c  viscosity.c
src/particles/: Makefile.in  bvals_particle.c  dump_particle_history.c  exchange.c  feedback.c  init_particle.c  integrators_particle.c  output_particle.c  particle.c  particle.h  prototypes.h  set_bvals_particle.c  utils.c  utils_particle.c
src/point_source/: Makefile.in  photoionization.c  point_source.c  prototypes.h
src/prob/: AcousWave.c  FullRTGlobal.c  FullRTtest.c  FullRTwave.c  LinwaveMHD.c  Marshak.c  README  RadClyGlobal.c  RadGlobal.c  RadMRI.c  RadRT_Edd.c  RadRThor.c  RadRTvert.c  Radshear.c  Shadow.c  beam2d.c  blast.c  bubble.c  carbuncle.c  cloud_rt.c  collapse3d.c  cpaw.c  cpaw1d.c  cpaw2d.c  cpaw3d.c  cshock1d.c  current_sheet.c  cyladvect.c  cylblast.c  cylbphi.c  cylbr.c  cylcvmri.c  cyldiff.c  cylfieldloop.c  cylnewtmri.c  cylrayleigh.c  cylspiral.c  cylunif.c  cylwind.c  cylwindrot.c  (+72 more)
src/radiation/: Makefile  Makefile.in  angles.c  bvals_rad.c  bvals_rad_shear.c  dump_intensity_vtk.c  formal_solution.c  gausseid_1d.c  gausseid_2d.c  gausseid_3d.c  hydro_to_rad.c  init_radiation.c  jacobi_1d.c  jacobi_2d.c  jacobi_2d_linear.c  jacobi_3d_linear.c  multig_1d.c  multig_2d.c  output_intensity_vtk.c  output_rad_mesh.c  output_spec.c  prototypes.h  rad_trans.c  radtrans_dt.c  ray_tracing.c  utils_rad.c
src/reconstruction/: Makefile.in  esystem_prim.c  lr_states_dc.c  lr_states_dc_radiMHD.c  lr_states_p3c.c  lr_states_plm.c  lr_states_plm_radMHD.c  lr_states_plm_radiMHD.c  lr_states_ppm.c  lr_states_ppme.c  lr_states_prim2.c  lr_states_prim3.c  prototypes.h
src/rsolvers/: Makefile.in  esystem_roe.c  exact.c  exact_sr.c  force.c  hllc.c  hllc_sr.c  hlld.c  hlld_sr.c  hlle.c  hlle_sr.c  prototypes.h  radHD_hlle.c  roe.c  two_shock.c
tst/1D-hydro/: athinput.cylunif  athinput.cylwind  athinput.cylwindrot  athinput.einfeldt1125  athinput.einfeldt1203  athinput.jeans  athinput.leveque  athinput.linear_wave1  athinput.linear_wave1d  athinput.noh  athinput.pgflow  athinput.shu-osher  athinput.slow-moving-shock  athinput.sod  athinput.sod-lw  athinput.sod-toro  athinput.twoibw  run.cylwindrot  run.linear_wave1  run.linear_wave1d
tst/1D-mhd/: athinput.brio+wu  athinput.brio-wu  athinput.cpaw1d  athinput.cshock1d  athinput.cylwindrotb  athinput.linear_wave1  athinput.linear_wave1d  athinput.rj1a  athinput.rj1b  athinput.rj2a  athinput.rj2b  athinput.rj3a  athinput.rj3b  athinput.rj4a  athinput.rj4b  athinput.rj4c  athinput.rj4d  athinput.torrilhon  run.cpaw1d  run.cylwindrotb  run.linear_wave1  run.linear_wave1d  run.test
tst/1D-radtrans/: athinput.linear_wave_rad1d  athinput.rad1d  athinput.radtest
tst/1D-sr-hydro/: athinput.mb1  athinput.mb2  athinput.mb3  athinput.mb4
tst/1D-sr-mhd/: athinput.mub1  athinput.mub2  athinput.mub3  athinput.mub4  (+2 more)
(+221 files in other folders)
